--- a/css/project.css
+++ b/css/project.css
@@ -163,6 +163,7 @@ html {
 /* PROJECT DESCRIPTION  */
 .description{
   display: flex;
+  /* flex-flow: row wrap; */
   text-align: left;
 }
 
@@ -173,6 +174,10 @@ html {
 } */
 
 /* THE PROCESS  */
+.process{
+  display: flex;
+  flex-flow: column nowrap;
+}
 
 /* PROBLEM  */
 
