--- a/css/receipt.css
+++ b/css/receipt.css
@@ -209,6 +209,181 @@ iframe{
     background-color: whitesmoke;
 }
 
+/* ITERATION SLIDE SHOW  */
+
+/* ITERATION IMAGE SLIDER  */
+.iteration-image-container{
+  width: 3000px;
+  height: 500px;
+  position: relative;
+  transition: left 2s;
+  -webkit-transition: left 2s;
+  -moz-transition: left 2s;
+  -o-transition: left 2s;
+}
+
+/* ITERATION IMAGES  */
+#iteration-image-1:target ~ .iteration-image-container{
+  left: 0;
+}
+
+#iteration-image-2:target ~ .iteration-image-container{
+  left: -500px;
+}
+
+#iteration-image-3:target ~ .iteration-image-container{
+  left: -1000px;
+}
+
+#iteration-image-4:target ~ .iteration-image-container{
+  left: -1500px;
+}
+
+#iteration-image-5:target ~ .iteration-image-container{
+  left: -2000px;
+}
+
+#iteration-image-6:target ~ .iteration-image-container{
+  left: -2500px;
+}
+
+/* CONCEPT SLIDE SHOW  */
+
+/* CONCEPT IMAGE CONTAINER  */
+.concept-image-container{
+  width: 7500px;
+  height: 500px;
+  position: relative;
+  transition: left 2s;
+  -webkit-transition: left 2s;
+  -moz-transition: left 2s;
+  -o-transition: left 2s;
+}
+
+/* CONCEPT IMAGES  */
+#concept-image-1:target ~ .concept-image-container{
+  left: 0;
+}
+
+#concept-image-2:target ~ .concept-image-container{
+  left: -500px;
+}
+
+#concept-image-3:target ~ .concept-image-container{
+  left: -1000px;
+}
+
+#concept-image-4:target ~ .concept-image-container{
+  left: -1500px;
+}
+
+#concept-image-5:target ~ .concept-image-container{
+  left: -2000px;
+}
+
+#concept-image-6:target ~ .concept-image-container{
+  left: -2500px;
+}
+
+#concept-image-7:target ~ .concept-image-container{
+  left: -3000px;
+}
+
+#concept-image-8:target ~ .concept-image-container{
+  left: -3500px;
+}
+
+#concept-image-9:target ~ .concept-image-container{
+  left: -4000px;
+}
+
+#concept-image-10:target ~ .concept-image-container{
+  left: -4500px;
+}
+
+#concept-image-11:target ~ .concept-image-container{
+  left: -5000px;
+}
+
+#concept-image-12:target ~ .concept-image-container{
+  left: -5500px;
+}
+
+#concept-image-13:target ~ .concept-image-container{
+  left: -6000px;
+}
+
+#concept-image-14:target ~ .concept-image-container{
+  left: -6500px;
+}
+
+#concept-image-15:target ~ .concept-image-container{
+  left: -7000px;
+}
+
+/* SLIDE SHOW CONTAINER RESEARCH */
+.slide-container{
+  width: 500px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  text-align: center;
+}
+
+/* RESEARCH IMAGE CONTAINER  */
+.research-image-container{
+  width: 1500px;
+  height: 300px;
+  position: relative;
+  transition: left 2s;
+  -webkit-transition: left 2s;
+  -moz-transition: left 2s;
+  -o-transition: left 2s;
+}
+
+/* SLIDE SHOW IMAGE  */
+.slider-image{
+  float: left;
+  margin: 0;
+  padding: 0;
+}
+
+/* SLIDER BUTTON CONTAINER  */
+.button-container{
+  top: -20px;
+  position: relative;
+}
+
+/* SLIDER BUTTON  */
+.slider-button{
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  border-radius: 5px;
+  background-color: gray;
+}
+
+/* ACTIVE IMAGE IN SLIDE SHOW  */
+.active-image{
+  background-color: blue;
+}
+
+/* RESEARCH IMAGES TARGET */
+
+#research-image-1:target ~ .research-image-container{
+  left: 0;
+}
+
+#research-image-2:target ~ .research-image-container{
+  left: -500px;
+}
+
+#research-image-3:target ~ .research-image-container{
+  left: -1000px;
+}
+
 /* THE WHOLE  */
 body{
     margin: 0;
