--- a/css/receipt.css
+++ b/css/receipt.css
@@ -46,16 +46,93 @@ html {
 .description img{
   width: 400px;
   height: 400px;
+  margin: 0 auto;
 }
 
 .research img{
   width: 500px;
   height: 300px;
+  margin: 0 auto;
 }
 
 .concept img, .insight img, .iteration img, .process img{
   width: 500px;
   height: 500px;
+  margin: 0 auto;
+}
+
+/* MODAL IMAGE */
+/* Style the Image Used to Trigger the Modal */
+#myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* HEADER */
@@ -164,14 +241,28 @@ html {
 .description{
   display: flex;
   /* flex-flow: row wrap; */
+}
+
+.description h2{
+  margin-bottom: 0.5em;
   text-align: left;
 }
 
-/* DEMO  */
-/* .demo{
-  display: flex;
+.description p{
+  line-height: 1.5em;
   text-align: left;
-} */
+}
+
+.description h5{
+  margin-top: 0.5em;
+  /* text-align: center; */
+}
+
+/* DEMO  */
+iframe{
+  width: 800px;
+  height: 450px;
+}
 
 /* THE PROCESS  */
 .process{
@@ -192,12 +283,6 @@ html {
 /* PROTOTYPE  */
 
 /* ETC  */
-
-/* VIDEO  */
-iframe{
-  width: 800px;
-  height: 450px;
-}
 
 /* CONTAINER  */
 .container {
@@ -365,6 +450,10 @@ iframe{
   background-color: gray;
 }
 
+.slider-button:hover{
+  background-color: lightgray;
+}
+
 /* ACTIVE IMAGE IN SLIDE SHOW  */
 .active-image{
   background-color: blue;
@@ -474,6 +563,13 @@ font-family: 'Poppins', sans-serif;
     /* PROTOTYPE  */
 
     /* ETC  */
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
 }
 
 /* ADJUSTED SCREEN - SMALL*/
