--- a/css/receipt.css
+++ b/css/receipt.css
@@ -311,33 +311,33 @@ iframe{
 }
 
 /* PROBLEM  */
-.problem{
+/* .problem{
   
-}
+} */
 
 .problem img{
   margin-bottom: 1.0em;
 }
 
 /* RESEARCH  */
-.research{
+/* .research{
   
-}
+} */
 
 /* INSIGHT  */
-.insight{
+/* .insight{
   
-}
+} */
 
 /* CONCEPT  */
-.concept{
+/* .concept{
   
-}
+} */
 
 /* ITERATE  */
-.iteration{
+/* .iteration{
   
-}
+} */
 
 /* PROTOTYPE  */
 
