--- a/css/receipt.css
+++ b/css/receipt.css
@@ -1201,4 +1201,8 @@ so they don't overlap */
     .container{
       max-width: 375px;
     }
+
+    .slider-button:hover{
+      background-color: blue;
+    }
 }
