--- a/css/index.css
+++ b/css/index.css
@@ -793,8 +793,8 @@ footer{
     }
     
     .proj-desc img{
-        width: 250px;
-        height: 250px;
+        width: 400px;
+        height: 400px;
     }
 }
 
@@ -946,8 +946,8 @@ footer{
     }
     
     .proj-desc img{
-        width: 175px;
-        height: 175px;
+        width: 300px;
+        height: 300px;
     }
 }
 
@@ -968,6 +968,7 @@ so they don't overlap */
     /* HEADER  */
     /* the header on top of page  */
     #header h1{
+        margin-top: 0;
         font-size: 36px;
     }
 
@@ -977,8 +978,9 @@ so they don't overlap */
 
     /* the logo  */
     .logo{
-        height: 50px;
-        width: 50px;
+        display: block;
+        height: 75px;
+        width: 75px;
     }
 
     /* NAVIGATION  */
@@ -1046,4 +1048,6 @@ so they don't overlap */
     .stock-img{
         font-size: 10px;
     }
+
+    
 }
