--- a/css/receipt.css
+++ b/css/receipt.css
@@ -1067,8 +1067,12 @@ so they don't overlap */
     /* THE PROCESS  */
     .process p, .description p{
       font-size: 14px;
-      padding: 0.5em 15px 0;
+      padding: 0 15px;
       text-align: left;
+    }
+
+    .process h2, .description h2{
+      padding-bottom: 0.5em;
     }
 
     /* PROBLEM  */
