--- a/css/index.css
+++ b/css/index.css
@@ -298,6 +298,17 @@ html {
     margin-top: 0.25em;
 }
 
+.earthquake-info{
+    padding: 1.0em 0;
+}
+
+.earthquake-info a{
+    color: blue;
+}
+
+.earthquake-info a:hover{
+    color: #283891;
+}
 .col h3{
     padding-bottom: 0.5em;
 }
@@ -878,7 +889,7 @@ footer{
 }
 
 /* WIDTH SIZE SMALLEST  */
-@media screen and (max-width: 450px){
+@media screen and (max-width: 500px){
     /* HEADER  */
     #header h1{
         font-size: 48px;
@@ -895,6 +906,10 @@ footer{
         font-size: 12px;
     }
 
+    .proj-desc p, .process-desc p, .about-info p{
+        text-align: left;
+    }
+    
     /* QUOTE  */
     .quote h1{
         font-size: 14px;
@@ -990,9 +1005,7 @@ so they don't overlap */
     /* NAVIGATION  */
 
     /* PROJECTS */
-    .proj-desc p, .process-desc p, .about-info p{
-        text-align: left;
-    }
+   
 
     .proj-desc h2, .process-desc h2{
         padding-bottom: 0.5em;
@@ -1060,5 +1073,9 @@ so they don't overlap */
         font-size: 10px;
     }
 
+    .proj-desc img{
+        width: 200px;
+        height: 200px;
+    }
     
 }
