--- a/css/hammer.css
+++ b/css/hammer.css
@@ -44,8 +44,9 @@ html {
 
 /* the project image  */
 .description img{
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
 }
 
 .research img{
@@ -53,9 +54,83 @@ html {
   height: 300px;
 }
 
-.concept img, .insight img, .iteration img, .process img{
+.concept img, .iteration img, .process img{
   width: 500px;
   height: 500px;
+}
+
+/* MODAL IMAGE  */
+/* Style the Image Used to Trigger the Modal */
+#myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  /* background-color: rgba(0,0,0,0.9); Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* HEADER */
@@ -163,8 +238,23 @@ html {
 /* PROJECT DESCRIPTION  */
 .description{
   display: flex;
-  /* flex-flow: row wrap; */
+  flex-flow: row wrap;
+  /* text-align: left; */
+}
+
+.description h2{
+  margin-bottom: 0.5em;
   text-align: left;
+}
+
+.description p{
+  line-height: 1.5em;
+  text-align: left;
+}
+
+.description h5{
+  margin-top: 0.5em;
+  /* text-align: center; */
 }
 
 /* DEMO  */
@@ -187,16 +277,144 @@ html {
 
 /* CONCEPT  */
 
+/* CONCEPT IMAGE CONTAINER  */
+.concept-image-container{
+  width: 5000px;
+  height: 500px;
+  position: relative;
+  transition: left 2s;
+  -webkit-transition: left 2s;
+  -moz-transition: left 2s;
+  -o-transition: left 2s;
+}
+
+/* CONCEPT IMAGES  */
+#concept-image-1:target ~ .concept-image-container{
+  left: 0;
+}
+
+#concept-image-2:target ~ .concept-image-container{
+  left: -500px;
+}
+
+#concept-image-3:target ~ .concept-image-container{
+  left: -1000px;
+}
+
+#concept-image-4:target ~ .concept-image-container{
+  left: -1500px;
+}
+
+#concept-image-5:target ~ .concept-image-container{
+  left: -2000px;
+}
+
+#concept-image-6:target ~ .concept-image-container{
+  left: -2500px;
+}
+
+#concept-image-7:target ~ .concept-image-container{
+  left: -3000px;
+}
+
+#concept-image-8:target ~ .concept-image-container{
+  left: -3500px;
+}
+
+#concept-image-9:target ~ .concept-image-container{
+  left: -4000px;
+}
+
+#concept-image-10:target ~ .concept-image-container{
+  left: -4500px;
+}
+
 /* ITERATE  */
+
+/* ITERATION IMAGE SLIDER  */
+.iteration-image-container{
+  width: 2500px;
+  height: 500px;
+  position: relative;
+  transition: left 2s;
+  -webkit-transition: left 2s;
+  -moz-transition: left 2s;
+  -o-transition: left 2s;
+}
+
+/* ITERATION IMAGES  */
+#iteration-image-1:target ~ .iteration-image-container{
+  left: 0;
+}
+
+#iteration-image-2:target ~ .iteration-image-container{
+  left: -500px;
+}
+
+#iteration-image-3:target ~ .iteration-image-container{
+  left: -1000px;
+}
+
+#iteration-image-4:target ~ .iteration-image-container{
+  left: -1500px;
+}
+
+#iteration-image-5:target ~ .iteration-image-container{
+  left: -2000px;
+}
 
 /* PROTOTYPE  */
 
 /* ETC  */
 
+/* SLIDE CONTAINER  */
+.slide-container{
+  width: 500px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  text-align: center;
+  margin-bottom: 1.0em;
+}
+
+/* SLIDE SHOW IMAGE  */
+.slider-image{
+  float: left;
+  margin: 0;
+  padding: 0;
+}
+
+/* SLIDER BUTTON CONTAINER  */
+.button-container{
+  top: -20px;
+  position: relative;
+}
+
+/* SLIDER BUTTON  */
+.slider-button{
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  border-radius: 5px;
+  background-color: gray;
+}
+
+.slider-button:hover{
+  background-color: lightgray;
+}
+
+/* ACTIVE IMAGE IN SLIDE SHOW  */
+.active-image{
+  background-color: blue;
+}
+
 /* VIDEO  */
 iframe{
   width: 800px;
   height: 450px;
+  margin-bottom: 1.0em;
 }
 
 /* CONTAINER  */
